--- a/riddle.html
+++ b/riddle.html
@@ -1,4 +1,8 @@
 
 Sometimes there is more than what meets the eye...
-
-<div style="background: #fff"> ...and yeah... there is. Take a look the source code ;) </div>
+<br/>
+<div style="color: #fff"> ...and yeah... there is. Take a look the source code ;) </div>
+<br/>
+<!--div> 
+Hey there :)
+Nice you made it so far :D</div-->
