--- a/riddle.html
+++ b/riddle.html
@@ -2,7 +2,7 @@
 Sometimes there is more than what meets the eye...
 <br/>
 <div style="color: #fff"> ...and yeah... there is. Take a look the source code ;) <br/>
-Use https://play.google.com/store/apps/details?hl=en&id=com.tozalakyan.viewsource&rdid=com.tozalakyan.viewsource for mobile.
+Use <a href="https://play.google.com/store/apps/details?hl=en&id=com.tozalakyan.viewsource&rdid=com.tozalakyan.viewsource">this app</a> for mobile.
 </div>
 <br/>
 <!--div> 
