--- a/riddle.html
+++ b/riddle.html
@@ -1,8 +1,9 @@
 
+<div style="font-size: 2rem>
 Sometimes there is more than what meets the eye...
 <br/>
 <div style="color: #fff"> ...and yeah... there is. Take a look the source code ;) <br/>
-Use <a href="https://play.google.com/store/apps/details?hl=en&id=com.tozalakyan.viewsource&rdid=com.tozalakyan.viewsource">this app</a> for mobile.
+Use <a style="color: #fff" href="https://play.google.com/store/apps/details?hl=en&id=com.tozalakyan.viewsource&rdid=com.tozalakyan.viewsource">this app</a> for mobile.
 </div>
 <br/>
 <!--div> 
@@ -26,3 +27,4 @@ main act:
 00110100 00111111 01110100 00111101 00110001 00110101 00110000 
 
 </div-->
+</div>
