--- a/riddle.html
+++ b/riddle.html
@@ -1,5 +1,5 @@
 
-<div style="font-size: 2rem>
+<div style="font-size: 2rem">
 Sometimes there is more than what meets the eye...
 <br/>
 <div style="color: #fff"> ...and yeah... there is. Take a look the source code ;) <br/>
