--- a/riddle.html
+++ b/riddle.html
@@ -7,8 +7,10 @@ Use <a style="color: #fff" href="https://play.google.com/store/apps/details?hl=e
 </div>
 <br/>
 <!--div> 
-Hey there :)
-Nice! You made it so far :D
+
+Nice one! You made it so far :D
+
+Now got to... jassio.github.io/riddlepage2
 
 There are some tickets waiting for you for... but uuups... what happend here. My bad ¯\_(ツ)_/¯
 
