--- a/riddlepage2.html
+++ b/riddlepage2.html
@@ -68,7 +68,7 @@ margin: auto !important;">
     <p><input type="button" size="30" name="Absenden" value="Entschlüsseln" onclick="entschluesseln()">
 
     </p><div>jassio.github.io/
-      <input type="text" name="klar" value="" size="30" style="margin-top: 5px" disabled></div>
+      <input type="text" name="klar" value="" size="30" style="margin-top: 5px" disabled></div>.html
 </form>
 
 <script language=JavaScript>
