--- a/riddle.html
+++ b/riddle.html
@@ -10,7 +10,7 @@ Use <a style="color: #fff" href="https://play.google.com/store/apps/details?hl=e
 
 Nice one! You made it so far :D
 
-Now got to... jassio.github.io/riddlepage2
+Now got to... jassio.github.io/riddlepage2.html
 
 </div-->
 </div>
