--- a/riddlepage2.html
+++ b/riddlepage2.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 
-</head>
-<body style="text-align: center !important;
+<div style="text-align: center !important;
 margin: auto !important;">
 <form action="" method="POST" name="myform">
     &nbsp;&nbsp;&nbsp;
@@ -162,5 +154,4 @@ function entschluesseln() {
 
 }
 </script>
-</body>
-</html>
+</div>
