--- a/riddlepage2.html
+++ b/riddlepage2.html
@@ -1,4 +1,5 @@
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <div style="text-align: center !important;
 margin: auto !important;">
 <form action="" method="POST" name="myform">
