--- a/riddlepage2.html
+++ b/riddlepage2.html
@@ -49,7 +49,7 @@ margin: auto !important;">
       <input type="text" name="schluessel" value="" size="30" hidden>
     </p>
 
-    <input type="text" name="klartext" value="huetedichvorbrutus" size="30" hidden>
+    <input type="text" name="klartext" value="" size="30" hidden>
 
     <p><input type="button" name="Absenden" value="verschluesseln" onclick="verschluesseln()" hidden>
 
@@ -61,7 +61,7 @@ margin: auto !important;">
     <p><input type="button" size="30" name="Absenden" value="Entschlüsseln" onclick="entschluesseln()">
 
     </p><div>jassio.github.io/
-      <input type="text" name="klar" value="" size="30" style="margin-top: 5px" disabled></div>.html
+      <input type="text" name="klar" value="" size="30" style="margin-top: 5px" disabled>.html</div>
 </form>
 
 <script language=JavaScript>
