--- a/lizzysWonderland/fortuneWheel.html
+++ b/lizzysWonderland/fortuneWheel.html
@@ -1,6 +1,6 @@
 <header>
-<script type="stylesheet" src="styles.css"></script>
-<script type"text/javascript" src="script.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
+<script type"text/javascript" href="script.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/p2.js/0.6.0/p2.min.js"></script>
 
 </header>
