--- a/lizzysWonderland/fortuneWheel.html
+++ b/lizzysWonderland/fortuneWheel.html
@@ -1,6 +1,6 @@
 <header>
 <link rel="stylesheet" type="text/css" href="styles.css">
-<script type"text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/p2.js/0.6.0/p2.min.js"></script>
 
 </header>
